# wbnova-api

./: .env.test.template  .gitignore  Cargo.toml  config.json
scripts/: update_api_client.sh
src/v2/objects/: abb_controller.rs  activate_license_request.rs  add_trajectory_error.rs  add_trajectory_request.rs  add_trajectory_response.rs  add_virtual_controller_motion_group_request.rs  api_version.rs  app.rs  arp_scan_response.rs  auto_blending.rs  blending_auto.rs  blending_position.rs  blending_space.rs  boolean_value.rs  bus_i_os_state.rs  bus_i_os_state_enum.rs  bus_io_description.rs  bus_io_modbus_tcp_client.rs  bus_io_modbus_tcp_server.rs  bus_io_profinet.rs  bus_io_profinet_default_route.rs  bus_io_profinet_ip_config.rs  bus_io_profinet_network.rs  bus_io_profinet_slot.rs  bus_io_profinet_virtual.rs  bus_io_type.rs  capsule.rs  cartesian_limits.rs  cartesian_ptp.rs  cell.rs  cell_description.rs  circle.rs  cloud_config_status.rs  cloud_config_status_configured.rs  cloud_config_status_not_configured.rs  cloud_configuration.rs  cloud_connection_error.rs  cloud_connection_error_invalid_token.rs  cloud_connection_error_leafnode_connection_error.rs  cloud_connection_error_leafnode_connection_timeout.rs  (+302 more)
src/v2/paths/: activate_license.rs  add_app.rs  add_bus_io_service.rs  add_modbus_io.rs  add_profinet_io.rs  add_robot_controller.rs  add_trajectory.rs  add_virtual_controller_coordinate_system.rs  add_virtual_controller_motion_group.rs  add_virtual_controller_safety_zone.rs  add_virtual_controller_tcp.rs  clear_apps.rs  (+140 more)
tests/: basic_cell_query.rs  basic_motion_data.rs
