[package]
name = "wbnova-api"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tungstenite = {version = "0.24.0", features = ["native-tls"]}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
dotenv = "0.15.0"
urlencoding = "2.1.3"